# FaceMeshUdp

./: .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  analyze_calibration.py  analyze_harmonization.py  analyze_pitch_correlation.py  analyze_yaw_correlation.py  calibration-lorenzo.json  capture_frame_flow.py  cleanup_script.py  eyes.ini  harmonization_capture.py  pitch_correlation_capture.py  pyproject.toml  test_argparse_calibration.py  test_calibration.py  test_calibration_alias.py  test_calibration_complete.py  test_identity_calibration.py  test_main_calibration_fix.py  test_overlay_rendering.py  yaw_correlation_capture.py
calibration_datapoint/: B.json  BL.json  BR.json  C.json  L.json  R.json  T.json  TL.json  TR.json
docs/: calibration.md
scripts/: make_dist_zip.py
src/facemesh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/facemesh_app/: __init__.py  calibration.py  camera_reader.py  capture.py  capture_window.py  facemesh_dao.py  frame_dispatcher.py  gaze_primitives.py  harmonization_contract.py  main.py  overlay.py  overlay_calibration.py  overlay_common.py  overlay_runtime.py  pipeline_steps.py  state_machine.py
