[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facemesh"
version = "0.1.0"
description = "Pure Python FaceMesh overlay + UDP app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mediapipe>=0.10.14",
  "opencv-python>=4.10.0.84",
  "numpy>=1.26.0",
  "pygame>=2.6.0"
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.11.0",
  "taskipy>=1.14.0"
]

[project.scripts]
facemesh = "facemesh_app.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.taskipy.tasks]
run = "python -m facemesh_app.main"
build-exe = ".\\.venv\\Scripts\\python -m PyInstaller --noconfirm --onefile --name facemesh src/facemesh_app/main.py"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["validation_*.py", "test_*.py"]
python_functions = ["validation_*"]
